BTCK CofeeHouse Final1

--- a/BTCKHOME.html
+++ b/BTCKHOME.html
@@ -96,7 +96,7 @@
                     <img src="./img/shadow.png" alt="shadow" class="shadow-img">
                 </div>
             </div>
-            <div class=" btn-welcome btn-read justify-content-start">
+            <div class=" btn-welcome btn-read-more justify-content-start">
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
