BTCK CoffeeHouse final2

--- a/BTCKTODAY.html
+++ b/BTCKTODAY.html
@@ -127,10 +127,10 @@
             </div>
             <div class="popular-item text-center position-relative ">
                 <div class="popular-item-img mb-3">
-                    <img src="./img/popular-1.jpg" alt="" style="width: 97%;">
+                    <img src="./img/popular-2.jpg" alt="" style="width: 97%;">
                 </div>
                 <div class="popular-item-title">
-                    <h3 class="tm-handwriting-font " style="font-size: 34px;">Americano</h3>
+                    <h3 class="tm-handwriting-font " style="font-size: 34px;">capuchino</h3>
                     <hr class="mx-auto" width="60%" style="margin-top: 0;">
                 </div>
                 <div class="mx-auto" style="width: 70%; font-size: 14px;" >
@@ -144,10 +144,10 @@
             </div>
             <div class="popular-item text-center position-relative ">
                 <div class="popular-item-img mb-3">
-                    <img src="./img/popular-1.jpg" alt="" style="width: 97%;">
+                    <img src="./img/popular-3.jpg" alt="" style="width: 97%;">
                 </div>
                 <div class="popular-item-title">
-                    <h3 class="tm-handwriting-font " style="font-size: 34px;">Americano</h3>
+                    <h3 class="tm-handwriting-font " style="font-size: 34px;">matcha</h3>
                     <hr class="mx-auto" width="60%" style="margin-top: 0;">
                 </div>
                 <div class="mx-auto" style="width: 70%; font-size: 14px;" >
@@ -183,10 +183,10 @@
             </div>
             <div class="popular-item text-center position-relative ">
                 <div class="popular-item-img mb-3">
-                    <img src="./img/popular-1.jpg" alt="" style="width: 97%;">
+                    <img src="./img/popular-2.jpg" alt="" style="width: 97%;">
                 </div>
                 <div class="popular-item-title">
-                    <h3 class="tm-handwriting-font " style="font-size: 34px;">Americano</h3>
+                    <h3 class="tm-handwriting-font " style="font-size: 34px;">capuchino</h3>
                     <hr class="mx-auto" width="60%" style="margin-top: 0;">
                 </div>
                 <div class="mx-auto" style="width: 70%; font-size: 14px;" >
@@ -200,10 +200,10 @@
             </div>
             <div class="popular-item text-center position-relative ">
                 <div class="popular-item-img mb-3">
-                    <img src="./img/popular-1.jpg" alt="" style="width: 97%;">
+                    <img src="./img/popular-3.jpg" alt="" style="width: 97%;">
                 </div>
                 <div class="popular-item-title">
-                    <h3 class="tm-handwriting-font " style="font-size: 34px;">Americano</h3>
+                    <h3 class="tm-handwriting-font " style="font-size: 34px;">matcha</h3>
                     <hr class="mx-auto" width="60%" style="margin-top: 0;">
                 </div>
                 <div class="mx-auto" style="width: 70%; font-size: 14px;" >
